Istio/virtualservice/virtualservice_default.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    app.shipt.com/cluster: app-staging
    app.shipt.com/environment: staging
    app.shipt.com/group: app
    app.shipt.com/region: us-central1
  labels:
    app: shipt-test-app
    release: shipt-test-app
  name: shipt-test-app-api
  namespace: app
spec:
  hosts:
  - shipt-test-app-api.app.svc.cluster.local
  http:
  - name: default
    retries:
      attempts: 5
      perTryTimeout: 15s
    route:
    - destination:
        host: shipt-test-app-api.app.svc.cluster.local
    timeout: 5s
